# gamma-recon

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
brain_tree/notebooks/: trial0_sentence_onset_gamma_baseline.ipynb
brain_tree/scripts/: brt_utils.py  plot_holdout_results.py  repair_holdout_predictions.py  run_holdout_analysis.py  run_per_trial_analysis.py
configs/: config.py
gamma_encoder/: __init__.py
gamma_encoder/data/: __init__.py  braintreebank.py  preprocess.py
gamma_encoder/losses/: base.py  cmin_logcosh.py  content_aware_l1.py  distdf.py  eegm2.py  log_power_spectral.py  mse.py  multires_stft.py  robust.py  whitened_mse.py
gamma_encoder/models/: decoder.py  encoder.py  (+4 more)
gamma_eval/: README.md  demo.py  evaluator.py
notes/: capacity_scaling_finding.md  codebase_walkthrough.md  laptop_overfit_smoke_results.md  linear_ar_walkthrough.md  pipeline_overview.md  server_readiness_checklist.md  whitened_mse_psd_fix.md
results/: overfit_batch.pt  whitened_mse_psd.pt
scripts/: build_segment_indices.py  cache_overfit_batch.py  cache_whitened_mse_psd.py  check_index_alignment.py  faithful_smoke.py  index_dataloader_smoke.py  plot_reconstructions.py  run_band_eval.py  run_overfit_sweep.py
segment_indices/: manifest.json
tests/: test_braintreebank_loader.py  test_channel_masking.py  test_faithful_encoder.py  test_gamma_encoder_pipeline.py  test_index_alignment.py  test_index_loader_integration.py  test_linear_ar.py  test_losses.py  test_metrics_logger.py  test_preprocess.py  test_reconstruction.py  test_server_readiness.py  test_tokenizers.py
(+308 files in other folders)
